# homesforsale

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  DockerfileASd  README.md  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  pyproject.toml  todo.txt
config/: __init__.py  asgi.py  sitemaps.py  urls.py  wsgi.py
config/settings/: base.py  production.py
config/settings/components/: admin.py  apps.py  auth.py  cache.py  common.py  cors.py  database.py  drf.py  language.py  log.py  logging.py  mail.py  security.py  static.py  templates.py  time.py
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/conf.d/: default.conf
docker/redis/: Dockerfile
docs/System Design/: Idea.md  Property.md  System.md  User.md  geonames.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
hfs/: asgi.py  settings.py  urls.py  wsgi.py
homesforsale/: apps.py  models.py  views.py
locale/bg/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
nginx/: nginx.conf
nginx/conf.d/: default.conf
requirements/: requirements.txt
templates/txt/: humans.txt
users/: __init__.py  admin.py  apps.py  context_processors.py  enums.py  forms.py  managers.py  models.py  serializers.py  sitemap.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_address_options_remove_user_company_vat_number_and_more.py  0002_alter_user_options_user_currency_user_language_and_more.py  0002_user_name_middle_user_reference_user_time_deleted_and_more.py  0003_alter_user_id_alter_user_timezone.py  0003_remove_user_last_login_alter_user_name_first_and_more.py  0003_rename_user_id_address_user_alter_user_timezone_and_more.py  0004_alter_user_id_alter_user_timezone.py  0004_alter_user_timezone_address.py  0004_user_company_vat_number_user_entity_type_and_more.py  0005_alter_user_timezone.py  0005_remove_user_reference_remove_user_reference_external_and_more.py  0006_alter_user_timezone.py  0007_alter_user_timezone.py  0008_alter_user_timezone.py  0009_alter_user_timezone.py  0010_alter_user_timezone.py  0011_alter_user_timezone.py  0012_alter_user_timezone.py  0013_alter_user_timezone.py
